# Pold

./: CLAUDE.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  input.rs  lib.rs  main.rs  record.rs  state.rs
src/components/: TableView.vue
src/router/: index.ts
src/utils/: useTauriEvent.ts
src/views/: About.vue  Home.vue
